fixed cutoff on sampling but scaling is still broken

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 #out, #preview, #previewCanvas {
     max-width: 40%;
     max-height: auto;
+    min-height: fit-content;
 }
 #input {
     margin-left: 30%;
